--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 # Defining default values for all jobs
 defaults: &defaults
   docker:
-    - image: circleci/node:latest
+    - image: abhisheksaxena7/salesforcedockerimg
     - step:
           script:
             - echo "master Branch Script Called."
@@ -19,16 +19,15 @@ phases:
   pre_build:
     commands:
       - echo Nothing to do in the pre_build phase...
-       - echo master Branch Script Called...
-       - echo $SFDC_USERNAME
-       - echo $SFDC_PASS
-       - echo $SFDC_TOKEN
-       - echo $SFDC_SERVERURL
-       - ant -buildfile build/build.xml deployEmptyCheckOnly -Dsfdc.username=$SFDC_USERNAME -Dsfdc.password=$SFDC_PASS$SFDC_TOKEN -Dsfdc.serverurl=https://$SFDC_SERVERURL
-    
   build:
     commands:
       - echo Build started on `14/05/2020`
+      - echo master Branch Script Called...
+      - echo $SFDC_USERNAME
+      - echo $SFDC_PASS
+      - echo $SFDC_TOKEN
+      - echo $SFDC_SERVERURL
+      - ant -buildfile build/build.xml deployEmptyCheckOnly -Dsfdc.username=$SFDC_USERNAME -Dsfdc.password=$SFDC_PASS$SFDC_TOKEN -Dsfdc.serverurl=https://$SFDC_SERVERURL
   post_build:
     commands:
       - echo Build completed on `14/05/2020`
